<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav_targets</name>
  <version>0.0.0</version>
  <description>ROB 456 and 514 Go around and go to a goal assignment, make navigation action </description>
  <maintainer email="grimmc@oregonstate.edu">cindygr</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>action_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_mesgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

<export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
